<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- App string -->
    <string name="app_name">GriefGroceryStore</string>
    <string name="app_name_my">解忧杂货店</string>
    <string name="top_bar">解忧杂货店</string>

    <!-- Sign string -->
    <string name="mail_address">邮箱</string>
    <string name="mail_address_hint">Mail Address</string>
    <string name="password">密码</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">登陆</string>
    <string name="sign_up">注册</string>
    <string name="pen_name">笔名</string>
    <string name="pen_name_hint">Pen Name</string>
    <string name="password_check">确认</string>
    <string name="password_check_hint">Check Password</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="male_english">Male</string>
    <string name="female_english">Female</string>

    <!-- Menu string -->
    <string name="tab_menu_text_firstpage">首页</string>
    <string name="tab_menu_text_user">我的</string>
    <string name="tab_menu_text_mailbox">信箱</string>
    <string name="imageButton_text_write">写信</string>
    <string name="unread_letter_number">4</string>
    <string name="default_user_name">陌生人</string>
    <string name="welcome_words">欢迎来到解忧杂货店</string>

    <!-- Write Letter string -->
    <string name="imageButton_text_back">返回</string>
    <string name="imageButton_text_send">发送</string>

    <!-- Show Letter string -->
    <string name="top_bar_show_letter">信件</string>
    <string name="show_letter_default">Loading......Loading......Loading......Loading......Loading......</string>

    <!-- List item string -->
    <string name="sender_or_receiver_name">From：陌生人</string>
    <string name="default_date">2018–12–25</string>
    <string name="default_content" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="imageButton_text_reply">回信</string>

    <!-- User String -->
    <string name="button_choice_my">我的</string>
    <string name="button_choice_others">陌生人的</string>

</resources>
