<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_list_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp">

        <TextView
            android:id="@+id/sender_or_receiver"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:text="@string/sender_or_receiver_name"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/letter_date"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:text="@string/default_date"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/list_item_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <TextView
            android:id="@+id/letter_intro"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/default_content"
            android:textColor="@color/white"
            android:layout_marginTop="2dp" />

        <ImageView
            android:id="@+id/letter_read_icon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/icon_read"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/imageButton_text_reply" />
    </LinearLayout>

</LinearLayout>