<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <!-- 顶部导航栏 -->
    <TextView
        android:id="@+id/sign_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/top_bar"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <!-- 圆形图像 -->

    <!-- 邮箱输入框 -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="176dp"
        android:background="@drawable/shape_white_text">

        <TextView
            android:id="@+id/textView_mail_address"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="1dp"
            android:text="@string/mail_address"
            android:textColor="@color/colorAccent"
            android:textSize="11sp"
            tools:ignore="SmallSp"
            android:singleLine="true"/>

        <View
            android:id="@+id/view_vertical_line1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_toEndOf="@id/textView_mail_address"
            android:layout_toRightOf="@id/textView_mail_address"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/editText_mail_address_in"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/view_vertical_line1"
            android:layout_toRightOf="@id/view_vertical_line1"
            android:ems="18"
            android:hint="@string/mail_address_hint"
            android:inputType="textEmailAddress"
            android:padding="1dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:singleLine="true"/>

    </RelativeLayout>

    <!-- 密码输入框 -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@drawable/shape_white_text">

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="1dp"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <View
            android:id="@+id/view_vertical_line2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_toEndOf="@id/textView_password"
            android:layout_toRightOf="@id/textView_password"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/editText_password_in"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/view_vertical_line2"
            android:layout_toRightOf="@id/view_vertical_line2"
            android:ems="18"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="1dp"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

    </RelativeLayout>

    <!-- 登陆按钮 -->
    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/shape_button"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent" />

    <!-- 注册按钮 -->
    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="248dp"
        android:layout_marginLeft="248dp"
        android:layout_marginBottom="260dp"
        android:background="@color/transparent"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent" />

</RelativeLayout>