<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstPageFragment"
    android:background="@drawable/firstpage">

    <TextView
        android:id="@+id/firstpage_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/default_user_name"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="110dp"
        android:text="@string/welcome_words"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_go_mailbox"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="66dp"
        android:background="@color/transparent"/>

    <TextView
        android:id="@+id/text_unread_letter_number"
        android:layout_width="18dp"
        android:layout_height="16dp"
        android:layout_alignTop="@+id/button_go_mailbox"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/white"
        android:text="@string/unread_letter_number"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textAlignment="center"/>

</RelativeLayout>