<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragment"
    android:background="@color/normal_background_color">

    <!-- 圆形头像 -->
    <ImageView
        android:id="@+id/user_image_male"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:background="@drawable/user_boy"
        android:contentDescription="@string/male_english" />

    <ImageView
        android:id="@+id/user_image_female"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="74dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/user_girl"
        android:visibility="invisible"
        android:contentDescription="@string/female_english" />

    <!-- 选择按钮 -->
    <!--<Button-->
        <!--android:id="@+id/choice_my_letter"-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="34dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginStart="30dp"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginTop="194dp"-->
        <!--android:background="@drawable/shape_button"-->
        <!--android:text="@string/button_choice_my"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@color/colorAccent" />-->

    <!--<Button-->
        <!--android:id="@+id/choice_others_letter"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="34dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginStart="90dp"-->
        <!--android:layout_marginLeft="90dp"-->
        <!--android:layout_marginTop="194dp"-->
        <!--android:background="@drawable/shape_button"-->
        <!--android:text="@string/button_choice_others"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@color/colorAccent" />-->

    <!-- 选择按钮（RadioButton式） -->
    <RadioGroup
        android:id="@+id/user_choice_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="194dp">

        <RadioButton
            android:id="@+id/choice_my_letter"
            android:layout_width="60dp"
            android:layout_height="34dp"
            style="@style/TabUserItem"
            android:text="@string/button_choice_my"
            />

        <RadioButton
            android:id="@+id/choice_others_letter"
            android:layout_width="100dp"
            android:layout_height="34dp"
            style="@style/TabUserItem"
            android:text="@string/button_choice_others"/>
    </RadioGroup>

    <!-- Letter List -->
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="206dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp">

        <ListView
            android:id="@+id/list_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/transparent"
            android:scrollbars="none"/>

    </RelativeLayout>


</RelativeLayout>